--- a/crflix/index.html
+++ b/crflix/index.html
@@ -29,7 +29,7 @@
         <div class="movie-list" id="movieList">
             <!-- Card do Filme 1 -->
             <div class="movie-item">
-                <img src="https://via.placeholder.com/200x300" alt="Poster do Filme 1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVM8J6xhJz9asw2FrKOqOCJcFbwnD5xQ-2Gg&s" alt="Poster do Filme 1">
                 <h3>piratas do caribe:navegando por aguas misteriosas</h3>
                 <p>Aventura, Ação</p>
                 <p>2011</p>
@@ -37,15 +37,15 @@
             <!-- Card do Filme 2 -->
             <div class="movie-item">
                 <img src="https://via.placeholder.com/200x300" alt="Poster do Filme 2">
-                <h3></h3>
+                <h3>Annabelle 3</h3>
                 <p>Drama, Suspense</p>
-                <p>2022</p>
+                <p>2014</p>
             </div>
             <!-- Card do Filme 3 -->
             <div class="movie-item">
                 <img src="https://via.placeholder.com/200x300" alt="Poster do Série 1">
-                <h3>Série 1</h3>
-                <p>Comédia</p>
+                <h3>Vikings</h3>
+                <p>ação</p>
                 <p>1ª Temporada</p>
             </div>
         </div>
